--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -5,5 +5,23 @@
     "third": "Навыки",
     "fourth": "Проекты",
     "five": "СВЯЗАТЬСЯ"
+  },
+  "me": {
+    "i": "Я",
+    "name": "Михаил Степанов.",
+    "with": "С",
+    "and": "и",
+    "f": "Я создаю интерфейсы, которые делают работу пользователя более приятной, чем просмотр кошечек в интернете.",
+    "s": "Позвольте мне превратить ваш проект в тихий рай для ваших глаз и пальцев."
+  },
+  "about": {
+    "Ab": "Обо мне",
+    "hi": "Ну как у вас  дела?",
+    "im": "Я  full stack, который стремится к изучению новых технологий.",
+    "y1": "Я учусь в универе под названием ",
+    "y2": "ЯГТУ",
+    "skill": "Моя цель - стать высококвалифицированным разработчиком",
+    "work": "Вот некоторые из технологий, с которыми я работал в последнее время:"
+
   }
 }
